--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			
@@ -95,7 +95,7 @@
                         <groupId>net.sf.proguard</groupId>
                         <artifactId>proguard-base</artifactId>
 
-                        <version>4.9</version>
+                        <version>5.1</version>
                         <scope>runtime</scope>
                     </dependency>
                 </dependencies>
@@ -110,8 +110,10 @@
 	            <configuration>
 					<libs> 
 			<!-- 				<lib>${java.home}/lib/rt.jar</lib> -->
- 			        <lib>${java.home}/../Classes/classes.jar</lib> 
+ 			<!--       <lib>${java.home}/../Classes/classes.jar</lib>  -->  
 				        <!--   lib>${java.home}/lib/classes.jar</lib -->
+				        
+						<lib>${java.home}/lib/rt.jar</lib>
 				     </libs>   
 	            </configuration>
 	        </plugin>  
