--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,9 @@
 					<includes>
 						<include>**/Test*.java</include>
 					</includes>
+					<!-- <testFailureIgnore>true</testFailureIgnore>  -->	
 			        <forkMode>pertest</forkMode>
-			        <argLine>-Xms500M -Xmx500M -Dkite9.logging=off -Djava.awt.headless=true</argLine>
+			        <argLine>-Xms500M -Xmx500M -Dkite9.logging=off -Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
 				</configuration>
 			</plugin>
 			
@@ -231,6 +232,12 @@
 			<groupId>org.kite9</groupId>
 			<artifactId>kite9-java-examples</artifactId>
 			<version>1.11-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+			<version>2.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
