--- a/proguard.conf
+++ b/proguard.conf
@@ -4,45 +4,12 @@
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 
--keep public class org.kite9.diagram.visualization.display.java2d.style.* {
+-keep public class org.kite9.diagram.batik.format.* {
     public protected private *;
 }
 
-
--keep public class org.kite9.diagram.visualization.display.java2d.style.sheets.* {
+-keep public class org.kite9.framework.** {
     public protected private *;
-}
-
--keep public class org.kite9.diagram.visualization.display.java2d.style.io.* {
-    public protected private *;
-}
-
--keep public class org.kite9.diagram.common.elements.* {
-	public *;
-}
-
--keep public class org.kite9.diagram.visualization.display.** {
-    public protected *;
-}
-
--keep public class org.kite9.diagram.visualization.display.java2d.* {
-    public protected *;
-}
-
--keep public class  org.kite9.diagram.visualization.display.java2d.adl_basic.ADLBasicCompleteDisplayer {	
-	public *;
-}
-
--keep public class org.kite9.diagram.visualization.pipeline.** {
-    public protected *;
-}
-
--keep public class org.kite9.diagram.visualization.format.** {
-    public protected *;
-}
-
--keep public class org.kite9.diagram.docs.** {
-    public protected *;
 }
 
 -keepclassmembernames class * {
