Fixing up proguard

--- a/proguard.conf
+++ b/proguard.conf
@@ -4,11 +4,23 @@
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 
--keep public class org.kite9.diagram.batik.format.* {
+-keep public class org.kite9.diagram.batik.* {
     public protected private *;
 }
 
 -keep public class org.kite9.framework.** {
+    public protected private *;
+}
+
+-keep public class org.kite9.diagram.dom.** {
+    public protected private *;
+}
+
+-keep public class org.kite9.diagram.model.** {
+    public protected private *;
+}
+
+-keep public class org.kite9.diagram.common.** {
     public protected private *;
 }
 
