--- a/proguard.conf
+++ b/proguard.conf
@@ -4,7 +4,7 @@
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 
--keep public class org.kite9.diagram.batik.* {
+-keep public class org.kite9.diagram.batik.** {
     public protected private *;
 }
 
