--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
 					</includes>
 					<!-- <testFailureIgnore>true</testFailureIgnore>  -->	
 			        <forkMode>pertest</forkMode>
-			        <argLine>-Xms500M -Xmx500M -Dkite9.logging=off -Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
+                    <printSummary>true</printSummary>
+  			        <argLine>-Xms500M -Xmx500M -Dkite9.logging=off -Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
 				</configuration>
 			</plugin>
 			
