--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.kite9</groupId>
 	<artifactId>kite9-visualization</artifactId>
-	<version>1.0.RC1-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>Kite9 Diagram Visualization</name>
@@ -25,7 +25,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+     
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
@@ -71,38 +71,6 @@
 				</executions>
 			</plugin>
 			
-		 	<plugin>
-	            <groupId>com.github.wvengen</groupId>
-	            <artifactId>proguard-maven-plugin</artifactId>
-	            <version>2.0.6</version>
-	            <dependencies>
-                    <dependency>
-                        <groupId>net.sf.proguard</groupId>
-                        <artifactId>proguard-base</artifactId>
-
-                        <version>5.1</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-	            <executions>
-	                <execution>
-	                    <phase>package</phase>
-	                    <goals>
-	                        <goal>proguard</goal>
-	                    </goals>
-	                </execution>
-	            </executions>               
-	            <configuration>
-					<libs> 
-			<!-- 				<lib>${java.home}/lib/rt.jar</lib> -->
- 			<!--       <lib>${java.home}/../Classes/classes.jar</lib>  -->  
-				        <!--   lib>${java.home}/lib/classes.jar</lib -->
-				        
-						<lib>${java.home}/lib/rt.jar</lib>
-				     </libs>   
-	            </configuration>
-	        </plugin>  
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -160,23 +128,7 @@
                 </executions>
               </configuration>
             </plugin>
-			<plugin>
-				<groupId>org.kite9</groupId>
-				<artifactId>kite9-java-maven-plugin</artifactId>
-				<version>1.9</version>
-				<configuration>
-					<userProperties>
-						<property>
-							<name>context.projectId</name>
-							<value>124</value>
-						</property>
-						<property>
-							<name>context.secretKey</name>
-							<value>982XFF1BN7Y7K6FO</value>
-						</property>
-					</userProperties>
-				</configuration>
-			</plugin>
+			
 		</plugins>
 	</reporting>
 
@@ -230,6 +182,12 @@
 		</dependency>
 	</dependencies>
 
-
+    <distributionManagement>
+      	<repository>
+      		<id>bintray-kite9-org-maven</id>
+      		<name>kite9-org-maven</name>
+      		<url>https://api.bintray.com/maven/kite9-org/maven/kite9-visualization/</url>
+      	</repository>
+    </distributionManagement>
 
 </project>
