--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 					<forkMode>pertest</forkMode>
 					<printSummary>true</printSummary>
 					<argLine>-Xms500M -Xmx500M -Dkite9.logging=off
-						-Djava.awt.headless=true -DignoreNotAddressed=true --illegal-access-permit</argLine>
+						-Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
 				</configuration>
 			</plugin>
 
