--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 11.0.4
     - name: Build with Maven
-      run: mvn -B deploy --file pom.xml --settings .github/workflows/settings.xml 
+      run: mvn -B -DskipTests deploy --file pom.xml --settings .github/workflows/settings.xml 
