--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,6 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>jetbrains-all</id>
-			<url>http://repository.jetbrains.com/all</url>
-		</repository>
-	</repositories>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -84,7 +77,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
+				<version>0.8.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -158,44 +151,6 @@
 
 	</build>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.4</version>
-			</plugin>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.7</version>
-			</plugin>
-			<!--	<plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.7.9</version>
-                    <configuration>
-                        <executions>
-                            <execution>
-                                <id>jacoco-initialize</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>jacoco-site</id>
-                                <phase>site</phase>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </configuration>
-                </plugin> -->
-
-		</plugins>
-	</reporting>
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -259,9 +214,9 @@
 
 	<distributionManagement>
 		<repository>
-			<id>bintray-kite9-org-maven</id>
-			<name>kite9-org-maven</name>
-			<url>https://api.bintray.com/maven/kite9-org/maven/kite9-visualization/</url>
+			<id>github</id>
+			<name>GitHub Kite9-Org Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/kite9-org/kite9-visualization</url>
 		</repository>
 	</distributionManagement>
 
