--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<kotlin.version>1.4.30</kotlin.version>
 		<kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 	</properties>
 
@@ -38,6 +39,8 @@
 						<configuration>
 							<sources>
 								<source>src/main/kotlin</source>
+								<source>src/main/java</source>
+								<source>src/main/js</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -85,15 +88,26 @@
 				<version>1.4.30</version>
 				<executions>
 					<execution>
-						<id>compile</id>
+						<id>compile-java</id>
 						<goals>
 							<goal>compile</goal>
-							<goal>js</goal>
 						</goals>
 						<configuration>
 							<sourceDirs>
 								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 								<sourceDir>${project.basedir}/src/main/java</sourceDir>
+							</sourceDirs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>compile-js</id>
+						<goals>
+							<goal>js</goal>
+						</goals>
+						<configuration>
+							<sourceDirs>
+								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+								<sourceDir>${project.basedir}/src/main/js</sourceDir>
 							</sourceDirs>
 						</configuration>
 					</execution>
