--- a/k9batik/pom.xml
+++ b/k9batik/pom.xml
@@ -33,6 +33,15 @@
 						-Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
 		</plugins>
 
 	</build>
