--- a/k9browser/pom.xml
+++ b/k9browser/pom.xml
@@ -49,8 +49,8 @@
 						</goals>
 						<configuration>
 							<sourceDirs>
+								<sourceDir>${project.basedir}/../k9layout/src/main/kotlin</sourceDir>
 								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-								<sourceDir>src/main/kotlin</sourceDir>
 							</sourceDirs>
 						</configuration>
 					</execution>
@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-js</artifactId>
-			<version>1.4.30</version>
+			<version>${kotlin.version}</version>
 		</dependency>
 	</dependencies>
 
