Enums now working

--- a/k9batik/pom.xml
+++ b/k9batik/pom.xml
@@ -74,6 +74,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>batik-transcoder</artifactId>
+			<version>${batik.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-bridge</artifactId>
 			<version>${batik.version}</version>
 		</dependency>
