Diable logging on server only

--- a/k9batik/pom.xml
+++ b/k9batik/pom.xml
@@ -32,7 +32,7 @@
 					<!-- <testFailureIgnore>true</testFailureIgnore> -->
 					<forkMode>pertest</forkMode>
 					<printSummary>true</printSummary>
-					<argLine>-Xms500M -Xmx500M -Dkite9.logging=off
+					<argLine>-Xms500M -Xmx500M -Dkite9.logging=${kite9.logging}
 						-Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
 				</configuration>
 			</plugin>
