--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<java.version>1.8</java.version>
 		<kotlin.version>1.4.30</kotlin.version>
 		<kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-		<batik.version>1.14.1-SNAPSHOT</batik.version>
+		<batik.version>1.14</batik.version>
 		<xmlunit.version>2.1.0</xmlunit.version>
 	</properties>
 
