Updated to Saxon, improved error-handling

--- a/server/kite9-server-java/application.yml
+++ b/server/kite9-server-java/application.yml
@@ -16,6 +16,7 @@ spring:
 kite9:
   diagram-log: OFF
   caching: true
+  transformer-factory: net.sf.saxon.TransformerFactoryImpl
     
 server:
   use-forward-headers: true
