--- a/visualization/kite9-visualization-java/pom.xml
+++ b/visualization/kite9-visualization-java/pom.xml
@@ -51,6 +51,11 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>Saxon-HE</artifactId>
+			<version>10.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-svggen</artifactId>
 			<version>${batik.version}</version>
