--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Kite9-Org Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/kite9-org/kite9-visualization</url>
+			<url>https://maven.pkg.github.com/kite9-org/kite9</url>
 		</repository>
 	</distributionManagement>
 
