Transform starting to work on the client side

--- a/server/kite9-server-java/application-local.yml
+++ b/server/kite9-server-java/application-local.yml
@@ -22,7 +22,7 @@ kite9:
   diagram-log: STREAM
   caching: false
   transformer:
-    factory: net.sf.saxon.TransformerFactoryImpl
+//    factory: net.sf.saxon.TransformerFactoryImpl
 
   
 management:
