--- a/server/kite9-server-java/pom.xml
+++ b/server/kite9-server-java/pom.xml
@@ -15,6 +15,7 @@
     </parent>
 
     <properties>
+    	<java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.run.main-class>com.kite9.server.Kite9ServerApplication</spring-boot.run.main-class>
     </properties>
@@ -109,12 +110,12 @@
             <scope>test</scope>
         </dependency> -->
         
-        <!-- server-side xslt transform
+        <!-- server-side xslt transform -->
         <dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>Saxon-HE</artifactId>
 			<version>10.5</version>
-		</dependency> -->
+		</dependency> 
 
 
         <!-- comparing doms. Used for commands and tests -->
