Fixed encapsulated SVG rendering issue when images are broken

--- a/server/kite9-server-java/application-local.yml
+++ b/server/kite9-server-java/application-local.yml
@@ -19,7 +19,7 @@ spring:
         max-age: 0
 
 kite9:
-  diagram-log: STREAM
+  diagram-log: OFF
   caching: false
   transformer:
     factory: net.sf.saxon.TransformerFactoryImpl
