Added new subprojects

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<module>visualization/kite9-visualization-js</module>
 		<module>visualization/kite9-visualization-java</module>
 		<module>pipeline/kite9-pipeline-common</module>
+		<module>server/kite9-client-js</module>
+		<module>server/kite9-templates</module>
 		<module>server/kite9-server-java</module>
 	</modules>
 
