--- a/visualization/kite9-visualization-js/pom.xml
+++ b/visualization/kite9-visualization-js/pom.xml
@@ -13,10 +13,6 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<properties>
-		<java.version>11</java.version>
-	</properties>
-
 	<name>Kite9 Visualization Javascript</name>
 
 	<build>
@@ -92,6 +88,21 @@
 								</resource>
 							</resources>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-compile</id>
+						<phase>none</phase>
 					</execution>
 				</executions>
 			</plugin>
