--- a/server/kite9-server-java/pom.xml
+++ b/server/kite9-server-java/pom.xml
@@ -42,13 +42,6 @@
             <version>1.306</version>
         </dependency>
  
-        <!-- Azure -->
-        <dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>applicationinsights-spring-boot-starter</artifactId>
-            <version>2.5.1</version>
-        </dependency>
-
         <!-- Spring Infrastructure -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -142,7 +135,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+      <!--         <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.2.0</version>
                 <executions>
@@ -166,7 +159,7 @@
                     </execution>
                 </executions>
             </plugin>
-       <!--     <plugin>
+         <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
@@ -174,7 +167,7 @@
                     <argLine>-Xms500M -Xmx500M -Djava.awt.headless=true</argLine>
                 </configuration>
             </plugin>--> 
-            <plugin>
+         <!--   <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
@@ -188,7 +181,7 @@
                         <phase>none</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 
