--- a/server/kite9-server-java/pom.xml
+++ b/server/kite9-server-java/pom.xml
@@ -18,6 +18,8 @@
     	<java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.run.main-class>com.kite9.server.Kite9ServerApplication</spring-boot.run.main-class>
+		<maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <name>Kite9 Server (Redux)</name>
