--- a/server/kite9-server-java/pom.xml
+++ b/server/kite9-server-java/pom.xml
@@ -22,7 +22,7 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <name>Kite9 Server (Redux)</name>
+    <name>Kite9 Server (Spring-Boot)</name>
 
     <dependencies>
         <!-- Kite9 -->
