--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,6 @@ on: [push]
 
 jobs:
   build:
-    env:
-      kite9.logging: off
-      
     runs-on: ubuntu-latest
 
     steps:
@@ -17,3 +14,8 @@ jobs:
         java-version: 11.0.4
     - name: Build with Maven
       run: mvn -B source:jar test --file pom.xml
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v3
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/build/test-results/test/TEST-*.xml'
