--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ ssp.info
 # Secrets
 application.yml
 application-local.yml
+
+# Typescript / Node
+server/kite9-server-java/src/main/resources/static/node_modules/
+server/kite9-server-java/src/main/resources/static/package-lock.json
