--- a/server/kite9-server-java/src/main/resources/static/tsconfig.json
+++ b/server/kite9-server-java/src/main/resources/static/tsconfig.json
@@ -3,11 +3,13 @@
 	"compilerOptions": {
 		"disableSizeLimit": true,
 		"allowJs": true,
-		"outDir": "dist",
-		"target": "es2015",
-		"strict": true,
+		"outDir": "../../../../target/classes/static",
+		"target": "es2021",
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"lib": [
+		      "es2019","DOM"
+		]
 	},
 	"include": [
 		"**/*"
