Converted containment to typescript

--- a/server/kite9-server-java/src/main/resources/static/tsconfig.json
+++ b/server/kite9-server-java/src/main/resources/static/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"disableSizeLimit": true,
 		"allowJs": true,
-		"outDir": "../../../../target/classes/static",
+		"outDir": "../../../../target/classes/static/public",
 		"target": "es2021",
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
