Working in the browser again

--- a/server/kite9-server-java/src/main/resources/static/tsconfig.json
+++ b/server/kite9-server-java/src/main/resources/static/tsconfig.json
@@ -9,7 +9,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"lib": [
 		      "es2019","DOM"
-		]
+		],
+		"moduleResolution": "node"
 	},
 	"include": [
 		"**/*"
