--- a/server/kite9-server-java/src/main/resources/static/package.json
+++ b/server/kite9-server-java/src/main/resources/static/package.json
@@ -15,5 +15,10 @@
 		"@typescript-eslint/parser": "^5.40.1",
 		"eslint": "^8.24.0",
 		"typescript": "4.8.3"
+	},
+	"dependencies": {
+		"@codemirror/basic-setup": "^0.20.0",
+		"@codemirror/lang-xml": "^6.0.1",
+		"@codemirror/view": "^6.4.0"
 	}
 }
