Fixed size styles

--- a/server/kite9-server-java/src/main/resources/static/tsconfig.json
+++ b/server/kite9-server-java/src/main/resources/static/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
-		"disableSizeLimit": true,
+		"sourceMap" : true,
 		"allowJs": true,
 		"outDir": "../../../../target/classes/static/public",
 		"target": "es2021",
