Fixed replace, links going to back

--- a/server/kite9-server-java/tsconfig.json
+++ b/server/kite9-server-java/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"outDir": "target/classes/static/public",
-		"rootDir": "",
+		"rootDir": "src/main/resources/static/public",
 		"target": "es2021",
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
@@ -13,6 +13,6 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"src/main/resources/static/public/**/*"
+		"**/*"
 	]
 }
