--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         java-version: 11.0.4
+    - uses: actions/setup-node@v3
+      name: Setup NodeJS
     - name: Build with Gradle
       run: gradle clean build
     - name: Publish Test Report
