--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: 11.0.4
+        distribution: 'adopt'
+        java-version: '11'
     - uses: actions/setup-node@v3
       name: Setup NodeJS
     - name: Build with Gradle
