Simplifying Source config and adding hidden directory support

--- a/server/kite9-server-java/src/jvmTest/resources/config/config2.yml
+++ b/server/kite9-server-java/src/jvmTest/resources/config/config2.yml
@@ -1,11 +1,9 @@
 uploads: .kite9/loader
 sources:
-- path: p1
-  showDirectories: true
-  pattern: "**/*.(adl|svg)"
-- path: p2
-  showDirectories: false
-  pattern: "*"
+- showDirectories: true
+  pattern: "p1/**/*.adl"
+- showDirectories: false
+  pattern: "p2/*"
   
 templates:
 - a
