--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.project
 *.classpath
 target
-.settings
+.settings/
 bin
 
 # IntelliJ
@@ -13,7 +13,7 @@ bin
 .idea/
 .idea/*
 *.iml
-build
+build/
 .gradle
 gradle
 
