--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
       name: Setup NodeJS
     - name: Build with Gradle
       run: gradle clean build
+      env:
+        kite9.logging: OFF
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v3
       if: always() # always run even if the previous step fails
