--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,34 @@
 name: Test / CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt'
-        java-version: '11'
-    - uses: actions/setup-node@v3
-      name: Setup NodeJS
-    - name: Build with Gradle
-      run: gradle clean build
-      env:
-        kite9.logging: OFF
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v3
-      if: always() # always run even if the previous step fails
-      with:
-        report_paths: '**/TEST-*.xml'
+      - uses: actions/checkout@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: "adopt"
+          java-version: "17"
+      - uses: actions/setup-node@v3
+        name: Setup NodeJS
+      - name: Build with Gradle
+        run: gradle clean build jacocoTestReport
+        env:
+          kite9.logging: OFF
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: "**/TEST-*.xml"
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        if: always() # always run even if the previous step fails
+        with:
+          file: ./**/build/reports/jacoco/test/jacocoTestReport.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
