--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,10 @@ jobs:
           java-version: "17"
       - uses: actions/setup-node@v3
         name: Setup NodeJS
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: "8.13"
       - name: Build with Gradle
         run: gradle clean build jacocoTestReport
         env:
