--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           gradle-version: "8.13"
       - name: Build with Gradle
-        run: gradle clean test
+        run: gradle clean jvmTest
         env:
           kite9.logging: OFF
       - name: Generate Test Coverage Report
