--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,9 @@ jobs:
         with:
           report_paths: "**/TEST-*.xml"
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        if: always() # always run even if the previous step fails
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./**/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
           name: codecov-umbrella
