--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           gradle-version: "8.13"
       - name: Generate Test Coverage Report
-        run: gradle clean jvmTest --tests "*CISuite*" jacocoTestReport jacocoTestCoverageVerification
+        run: gradle clean jvmTest --include-tag ci jacocoTestReport jacocoTestCoverageVerification
         if: always() # always run even if the previous step fails
         env:
           kite9.logging: OFF
@@ -33,7 +33,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./**/build/reports/jacoco/test/jacocoTestReport.xml
+          files: ./**/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
