--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           gradle-version: "8.13"
       - name: Generate Test Coverage Report
-        run: gradle clean jvmTest --include-tag ci jacocoTestReport jacocoTestCoverageVerification
+        run: gradle clean jvmTest jacocoTestReport jacocoTestCoverageVerification
         if: always() # always run even if the previous step fails
         env:
           kite9.logging: OFF
