hopefully getting coverage to show

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,12 @@ jobs:
       - name: Generate Test Coverage Report
         run: gradle clean jvmTest jacocoTestReport jacocoTestCoverageVerification
         if: always() # always run even if the previous step fails
+        continue-on-error: true
         env:
           kite9.logging: OFF
+      - name: Debug Coverage Files
+        run: find . -name "*.xml" -path "*/jacoco/*" | head -20
+        if: always()
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
@@ -31,9 +35,11 @@ jobs:
           report_paths: "**/TEST-*.xml"
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
+        if: always() # always run even if the previous step fails
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./**/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
+          verbose: true
