--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,13 @@ jobs:
         env:
           kite9.logging: OFF
       - name: Debug Coverage Files
-        run: find . -name "*.xml" -path "*/jacoco/*" | head -20
+        run: |
+          echo "=== Looking for coverage files ==="
+          find . -name "*.xml" -path "*/jacoco/*" 2>/dev/null | head -20 || echo "No jacoco XML files found"
+          echo "=== Looking for any XML files in build directories ==="
+          find . -name "*.xml" -path "*/build/*" 2>/dev/null | head -20 || echo "No build XML files found"
+          echo "=== Looking for jacocoTestReport files ==="
+          find . -name "*jacocoTestReport*" 2>/dev/null | head -20 || echo "No jacocoTestReport files found"
         if: always()
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
@@ -38,7 +44,7 @@ jobs:
         if: always() # always run even if the previous step fails
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./**/build/reports/jacoco/test/jacocoTestReport.xml
+          files: ./**/build/reports/jacoco/**/*.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
