--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,16 @@ jobs:
           echo "=== Looking for jacocoTestReport files ==="
           find . -name "*jacocoTestReport*" 2>/dev/null | head -20 || echo "No jacocoTestReport files found"
         if: always()
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-reports
+          path: |
+            **/build/reports/jacoco/**/*
+            **/build/jacoco/**/*
+            **/jacocoTestReport.*
+          retention-days: 30
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
